--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,3 @@
-
 <h1>Editing Book</h1>
 <% if @book.errors.any? %>
   <div id="error_explanation" class="alert alert-danger">
@@ -21,7 +20,7 @@
     <%= f.text_area :body,class:"col-xs-12" %>
 
   <nav>
-     <%= f.submit 'Update Book',class: "col-xs-12 btn btn-primary" %>
+     <%= f.submit 'Update Book',class: "col-xs-12 btn btn-success" %>
   </nav>
 　<% end %>
 
