--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -19,7 +19,7 @@
    <%= @user.name %>
    <h5>introduction</h5>
    <%= @user.introduction %>
-    <%= link_to"",edit_user_path(current_user.id), class: "btn btn-outline-secondary fas fa-user-cog"%>
+    <%= link_to"",edit_user_path(current_user.id), class: "btn btn-outline-secondary btn-block fas fa-user-cog"%>
 
 
    <%= form_for(@book,  url: books_path) do |f| %>
@@ -30,7 +30,7 @@
     <h4>Opinion</h4>
      <%= f.text_field :body,class: "col-xs-12" %>
     <nav>
-    <%= f.submit 'Create Book',class: "col-xs-12 btn btn-primary" %>
+    <%= f.submit 'Create Book',class: "col-xs-12 btn btn-success" %>
     </nav>
     <% end %>
     </div>
