--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,6 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <div class="col-md-3">
-
+  <div class="col-md-3">
 
   <h2>User info</h2>
   <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg" ,format: 'no_image.jpg' %>
@@ -27,7 +26,7 @@
       <% end %>
   </div>
 
-  <div class= "col-md-9">
+  <div class= "col-md-8 offset-md-1">
     <h2>Users</h2>
     <table class='table'>
 
